<resources>
    <string name="app_name">Madina</string>
    <string name="title_FAdd">Add</string>
    <string name="title_FNeeds">Needs</string>
    <string name="title_FQRC">QRC</string>
    <string name="title_holiday">الأجازة</string>
    <string name="title_needs">مستحقات</string>
    <string name="title_QRC">كودك</string>
    <string name="title_profile">حسابك</string>
    <string name="pass_txt">كلمةالمرور</string>

    <string name="sign_in_btn">تسجيل دخول</string>
    <string name="logout">تسجيل خروج</string>
    <string name="sign_up_btn">انشاء حساب جديد</string>

    <string name="email_txt">الايميل</string>

    <string name="ssn_txt">الرقم القومي</string>

    <string name="forget_txt">هل نسيت كلمةالمرور؟</string>

    <string name="email_hint">ادخل الايميل</string>

    <string name="pass_hint">ادخل كلمةالمرور</string>

    <string name="ssn_hint">ادخل رقمك القومى</string>

    <string name="name_txt">الاسم باللغةالعربية</string>

    <string name="name">الاسم  </string>

    <string name="adress">العنوان</string>

    <string name="phone_num">رقم الهاتف</string>

    <string name="pass_confir">تاكيد كلمةالمرور</string>

    <string name="welcome_txt">اهلا بك</string>

    <string name="vacation_txt">فترة اجازتك</string>

    <string name="start_date">تاريخ الابتداء</string>

    <string name="end_date">تاريخ الانتهاء</string>
    <string name="qrcSndHint">قم بادخال رقمك القومي</string>
    <string name="createQrcBtn">انشاء</string>

    <string name="confirmation">تاكيد</string>
    <string name="access_edt">Enter your ID as a worker </string>
    <string name="access_btn"> Login as a student</string>
    <string name="coleage"> الكليه</string>
    <string name="building_num">رقم المبني</string>
    <string name="building_name"> اسم المبني</string>
    <string name="building_hint">ادخل اسم المبني</string>
    <string name="room_num">رقم الغرفه</string>
    <string name="room_hint">ادخل رقم الغرفه</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="building_names">
        <item>هاء</item>
        <item>حاء</item>
        <item>باء </item>
        <item>الف</item>
        <item>زاي</item>
        <item>واو</item>

    </string-array>
    <string-array name="colages">
        <item>هندسة</item>
        <item>طب بشرى</item>
        <item>طب اسنان</item>
        <item>تمريض</item>
        <item>الدراسات الاسلاميه والعربية</item>
        <item>الدراسات لانسانية</item>
        <item>التجارة</item>
        <item>الاقتصاد المنزلي</item>
        <item>التربية الرياضية</item>

    </string-array>
</resources>