<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="lvm"
            type="com.example.madina.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bottomNavBackGround"
        android:orientation="vertical"
        tools:context=".login.LoginActivity">
        <ImageView
            android:id="@+id/shape_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/needs_background"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="135dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/logoback"
            app:layout_constraintWidth_percent="0.7"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/login_card"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:padding="@dimen/_10sdp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card"
                    android:backgroundTint="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="55dp"
                        android:text="@string/welcome_txt"
                        android:textColor="@color/light_black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/email_txt"
                        android:textColor="@color/light_black"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:hint="@string/email_hint"
                        android:padding="6dp"
                        app:boxBackgroundColor="@color/zxing_transparent"
                        android:textColor="@color/black"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/mail_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:background="@color/white"
                            android:text="@={lvm.email}"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:textSize="14sp"
                            app:hintAnimationEnabled="true" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/pass_txt"
                        android:textColor="@color/light_black"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/edt_txt"
                        app:hintAnimationEnabled="true"
                        android:textColor="@color/black"
                        android:hint="@string/pass_hint"
                        app:errorEnabled="true"
                        app:boxBackgroundColor="@color/zxing_transparent"
                        android:padding="6dp"
                        app:passwordToggleEnabled="true"
                        android:textColorHint="@color/gray">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/pass_layout"
                        android:textSize="14sp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:text="@={lvm.pass}"
                        android:textColor="@color/black"
                        android:background="@color/white"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/sig_in_btn"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/sign_in_btn_shape"
                        android:text="@string/sign_in_btn"
                        android:textColor="@color/white"
                        app:boxBackgroundColor="@color/zxing_transparent"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/sig_up_btn"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/sign_in_btn_shape"
                        android:text="@string/sign_up_btn"
                        android:textColor="@color/white"
                        android:onClick="@{(view)->lvm.navigator.openRegesterScreen()}"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/forget_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:text="@string/forget_txt"
                        android:onClick="@{(view)->lvm.forgetPassword()}"
                        android:textColor="@color/light_black"
                        android:textSize="16sp" />

                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>